# DeepREF

./: .gitignore  CLAUDE.md  README.md  framework_test.ipynb  framework_test_colab.ipynb  main.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
benchmark/: download_ddi.sh  download_preprocess_ddi.sh  download_preprocess_semeval2010.sh  download_preprocess_semeval2018.sh  download_semeval.sh  download_semeval2010.sh  download_semeval2018.sh  download_semeval20181-1.sh  download_semeval20181-2.sh  generate_parser.py
benchmark/ddi/: ddi_rel2id.json
benchmark/semeval2018/: semeval2018_rel2id.json
deepref/: config.py  pretrain.py
deepref/ablation/: ablation_studies.py  semeval2010_bert_entity_ablation_studies.csv
deepref/dataset/: combine_re_dataset.py  dataset.py  ddi_dataset.py  example_generator.py  hybrid_dataset.py  (+6 more)
example/: parser.py  train_redn.py  train_supervised_bert.py  train_supervised_bert_cnn_entity.py  train_supervised_cnn.py  train_supervised_distilbert.py  train_supervised_pcnn.py  train_supervised_roberta.py
opennre/: config.py  constants.py  example.py  pretrain.py
pre_processing/: preprocess_ddi.ipynb  preprocess_ddi.py  preprocess_semeval.py
pretrain/: download_bert.sh  download_biobert.sh  download_distilbert.sh  download_fasttext_crawl.sh  download_fasttext_wiki.sh  download_glove.sh  download_gpt2.sh  download_roberta.sh  download_scibert.sh  download_senna.sh  upos2id.json
resources/: mock_babelnet.json  mock_wikidata.json
results/: ResultsOpenNRE++.txt  classes.txt
tests/: test_inference_bert.py
(+326 files in other folders)
