[project]
name = "deepref"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deap>=1.4.3",
    "gensim>=4.4.0",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "nltk>=3.9.3",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "plotly>=6.5.2",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.3",
    "spacy>=3.8.11",
    "stanza>=1.11.0",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
